kubernetes&Openshift/Static-Website-Deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-custom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-custom
  template:
    metadata:
      labels:
        app: nginx-custom
    spec:
      containers:
      - name: nginx-custom
        image: marwantarek11/nginx-custom:latest
        ports:
        - containerPort: 80
